feat: implement assignment context assignee resolver service and tests